small layout & readme changes

--- a/css/5-layout.css
+++ b/css/5-layout.css
@@ -1,4 +1,11 @@
 /******************************
+Everything
+******************************/
+.container {
+	color: red;
+}
+
+/******************************
 Homepage
 ******************************/
 
