--- a/css/5-layout.css
+++ b/css/5-layout.css
@@ -13,7 +13,7 @@ Homepage
 ******************************/
 
 
-.homepage .section__content {
+.section__content {
 	display: flex;
 	justify-content: space-between;
 }
@@ -40,7 +40,9 @@ Elements I define
 	color: white;
 }
 
-
+#last-button-div {
+	text-align: center;
+}
 
 /******************************
 ******************************/
