added odd duck button

--- a/css/5-layout.css
+++ b/css/5-layout.css
@@ -46,6 +46,11 @@ Repeatable sections
 	background-color: #F0B358;
 }
 
+.odd-duck {
+	color: purple;
+	font-size: 20px;
+	font-weight: bold;
+}
 
 
 /******************************
