--- a/css/1-variables.css
+++ b/css/1-variables.css
@@ -1,3 +1,12 @@
 /*
-	The information for the CSS architecture is in the README.md file
+CSS architecture:
+
+We used a custom version of a mix of ITCSS and SMACSS. ITCSS (Inverted Triangle CSS) is an architecture that organizes CSS files from generic to explicit, and from low to high specificity. It does not have one specific framework, but rather is a way of thinking. SMACSS (Scalable and Modular Architecture for CSS) is a style guide for CSS. Additionally, we added numbers so that the files would stay in order.
+
+Our files are as follows:
+-- Variables - defines any variables in CSS (if used).
+-- Base - contains styles that are applied generally to the whole document, including fonts etc. (top of document) and styles applied to specific HTML elements like H1 and A tags (bottom of document).
+-- Semantic-Reusable - contains any classes I create that have semantic meaning, and are reusable throughout the website (e.g. "media-object" or "search-form__button").
+-- Appearance-Reusable - contains any classes that specify appearance, like .loud or .big., that I didn't want to add to the layout. Use sparingly.
+-- Layout -- contains stuff that pertains to specific sections (including the navigation section). Should put "skins" up top (things that apply to multiple sections referencing the OOCSS model), and specific sections below.
 */
