--- a/css/5-layout.css
+++ b/css/5-layout.css
@@ -1,3 +1,15 @@
+
+/******************************
+Base
+******************************/
+
+body {
+	margin: 0 auto;
+	width: 90%;
+	max-width: 900px;
+}
+
+
 /******************************
 Both pages
 ******************************/
