--- a/css/5-layout.css
+++ b/css/5-layout.css
@@ -18,6 +18,7 @@ Both pages
 header {
 	display: flex;
 	justify-content: space-between;
+	margin: 20px 0px;
 }
 
 .section__content {
@@ -28,6 +29,9 @@ header {
 .button {
 	background-color: #AD8965;
 	border: 2px solid black;
+	padding: 20px;
+	max-width: 180px;
+	text-align: center;
 }
 
 .button a {
@@ -35,6 +39,7 @@ header {
 	padding: 20px;
 	color: white;
 	font-size: 18px;
+	text-align: center;
 }
 
 /******************************
@@ -70,14 +75,22 @@ Unique sections
 ******************************/
 
 .hero {
-	text-align: center;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 
-.homepage .bottom-row {
+.bottom-row {
 	display: flex;
+	justify-content: space-between;
+	margin: 20px 0px;
 }
 
-#last-button-div {
-	text-align: center;
+.bottom-row p {
+	width: 50%;
 }
 
+#very-last-button-section {
+	display: block;
+	margin: 20px 0px;
+
+}
